Bug 474416 - arrow keys defer to alternate window
Summary: arrow keys defer to alternate window
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: unspecified
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-09-11 16:32 UTC by israeldavidson777
Modified: 2024-02-28 18:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
requested to paste over limit in length (87.98 KB, text/plain)
2023-09-11 16:32 UTC, israeldavidson777
Details

Note You need to log in before you can comment on or make changes to this bug.
Description israeldavidson777 2023-09-11 16:32:12 UTC
Created attachment 161561 [details]
requested to paste over limit in length

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Load animation view
2. place an object on canvas
3. switch to animation curves
4. add transform mask to the layer
5. select the layer and not the mask
6. push t then control+t to make it transform
7. arrow keys will produce results

OBSERVED RESULT
left and right arrow keys will default back to the "animation docked window" 

EXPECTED RESULT
move the object instead

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Dmitry Kazakov 2023-09-14 11:18:39 UTC
Hi, Israel!

Could you please clarify a bit, what exactly your problem is? Is it in the fact that the arrow shortcuts are caught by the timeline docker or you experience the crash?

The crash should be solved in the latest build:

https://binary-factory.kde.org/job/Krita_Stable_Windows_Build/

But about the shortcuts I'm not sure what is the expected way...
Comment 2 Dmitry Kazakov 2023-09-14 13:38:24 UTC
Git commit 9e3786975eb3ad4ec4ac5a202c41bbb5edbd98fe by Dmitry Kazakov.
Committed on 14/09/2023 at 15:38.
Pushed by dkazakov into branch 'master'.

Make sure that tool-related shortcuts have priority over canvas actions

All tool actions that come via ToolFactory are marked with "tool_action"
property, so we can distinguish them from the global actions, hence we
can give them a bit of priority.

M  +31   -1    libs/flake/KoToolProxy.cpp
M  +2    -0    libs/flake/KoToolProxy.h
M  +1    -0    libs/flake/KoToolProxy_p.h
M  +1    -0    libs/ui/input/kis_input_manager.cpp
M  +16   -1    libs/ui/input/kis_shortcut_matcher.cpp
M  +5    -0    libs/ui/input/kis_shortcut_matcher.h
M  +38   -0    libs/ui/input/kis_single_action_shortcut.cpp
M  +5    -0    libs/ui/input/kis_single_action_shortcut.h

https://invent.kde.org/graphics/krita/-/commit/9e3786975eb3ad4ec4ac5a202c41bbb5edbd98fe
Comment 3 Dmitry Kazakov 2024-02-28 18:09:36 UTC
Git commit a7d16773fbf7e52e0dbcda6a5659a39205867ee0 by Dmitry Kazakov.
Committed on 28/02/2024 at 12:38.
Pushed by dkazakov into branch 'kazakov/for-5.2'.

Make sure that tool-related shortcuts have priority over canvas actions

All tool actions that come via ToolFactory are marked with "tool_action"
property, so we can distinguish them from the global actions, hence we
can give them a bit of priority.

M  +31   -1    libs/flake/KoToolProxy.cpp
M  +2    -0    libs/flake/KoToolProxy.h
M  +1    -0    libs/flake/KoToolProxy_p.h
M  +1    -0    libs/ui/input/kis_input_manager.cpp
M  +16   -1    libs/ui/input/kis_shortcut_matcher.cpp
M  +5    -0    libs/ui/input/kis_shortcut_matcher.h
M  +38   -0    libs/ui/input/kis_single_action_shortcut.cpp
M  +5    -0    libs/ui/input/kis_single_action_shortcut.h

https://invent.kde.org/graphics/krita/-/commit/a7d16773fbf7e52e0dbcda6a5659a39205867ee0