Make sure that tool-related shortcuts have priority over canvas actions

All tool actions that come via ToolFactory are marked with "tool_action"
property, so we can distinguish them from the global actions, hence we
can give them a bit of priority.

BUG:474416